Add failing test for bad dates

--- a/test/fixtures/app/views/main.html
+++ b/test/fixtures/app/views/main.html
@@ -16,6 +16,7 @@
 	<li>Full date: {{#dateformat "dddd, d mmmm, yyyy"}}{{date}}{{/dateformat}}</li>
 	<li>Custom date: {{#dateformat "dd/mm/yy"}}{{date}}{{/dateformat}}</li>
 	<li>ISO date: {{#dateformat}}{{date}}{{/dateformat}}</li>
+	<li>Bad date: {{#dateformat}}invalid{{/dateformat}}</li>
 </ul>
 
 Start Paragraphs{{{paragraphs text start=1 end=2}}}End Paragraphs
