Add test for htmlEntities helper

--- a/test/fixtures/app/views/main.html
+++ b/test/fixtures/app/views/main.html
@@ -48,4 +48,7 @@ slice:{{#slice items limit="2" offset="2"}}{{this}}{{/slice}}:end
 {{#partial}}
 {{usePartial 'dynamic-partial/test'}}
 {{/partial}}
+
+<p>Start entities {{htmlEntities entitiesText}} End Entities</p>
+
 <div data-it="{{json obj}}"></div>
