added an ifBool helper

--- a/test/fixtures/app/views/main.html
+++ b/test/fixtures/app/views/main.html
@@ -39,6 +39,7 @@ Should appear
 ifEquals:{{#ifEquals thing1 "thing1"}}first{{else}}not first{{/ifEquals}} {{#ifEquals thing1 "thing2"}}second{{else}}not second{{/ifEquals}}
 ifAll:{{#ifAll thing1 thing2 thing3}}first{{else}}not first{{/ifAll}} {{#ifAll thing1 thing2 nothing}}second{{else}}not second{{/ifAll}}
 ifSome:{{#ifSome thing1 nothing}}first{{else}}not first{{/ifSome}} {{#ifSome nothing stillNothing}}second{{else}}not second{{/ifSome}}
+ifBool:{{#ifBool thing1 thing2 nothing "$0 && ($1 || $2)"}}first{{else}}not first{{/ifBool}} {{#ifBool @root/thing2 nothing thing1 "($0 && $1) && $2"}}second{{else}}not second{{/ifBool}}
 
 slice:{{#slice items limit="2" offset="2"}}{{this}}{{/slice}}:end
 
