--- a/test/fixtures/app/views/main.html
+++ b/test/fixtures/app/views/main.html
@@ -37,6 +37,7 @@ Should appear
 
 
 ifEquals:{{#ifEquals thing1 "thing1"}}first{{else}}not first{{/ifEquals}} {{#ifEquals thing1 "thing2"}}second{{else}}not second{{/ifEquals}}
+unlessEquals:{{#unlessEquals thing1 "thing1"}}first{{else}}not first{{/unlessEquals}} {{#unlessEquals thing1 "thing2"}}second{{else}}not second{{/unlessEquals}}
 ifAll:{{#ifAll thing1 thing2 thing3}}first{{else}}not first{{/ifAll}} {{#ifAll thing1 thing2 nothing}}second{{else}}not second{{/ifAll}}
 ifSome:{{#ifSome thing1 nothing}}first{{else}}not first{{/ifSome}} {{#ifSome nothing stillNothing}}second{{else}}not second{{/ifSome}}
 ifBool:{{#ifBool thing1 thing2 nothing "$0 && ($1 || $2)"}}first{{else}}not first{{/ifBool}} {{#ifBool @root/thing2 nothing thing1 "($0 && $1) && $2"}}second{{else}}not second{{/ifBool}}
