Add ifEqualsSome helper. (#71)

--- a/test/fixtures/app/views/main.html
+++ b/test/fixtures/app/views/main.html
@@ -41,6 +41,7 @@ unlessEquals:{{#unlessEquals thing1 "thing1"}}first{{else}}not first{{/unlessEqu
 ifAll:{{#ifAll thing1 thing2 thing3}}first{{else}}not first{{/ifAll}} {{#ifAll thing1 thing2 nothing}}second{{else}}not second{{/ifAll}}
 ifSome:{{#ifSome thing1 nothing}}first{{else}}not first{{/ifSome}} {{#ifSome nothing stillNothing}}second{{else}}not second{{/ifSome}}
 ifBool:{{#ifBool thing1 thing2 nothing "$0 && ($1 || $2)"}}first{{else}}not first{{/ifBool}} {{#ifBool @root/thing2 nothing thing1 "($0 && $1) && $2"}}second{{else}}not second{{/ifBool}}
+ifEqualsSome:{{#ifEqualsSome thing1 "thing1" "thing2"}}first{{else}}not first{{/ifEqualsSome}} {{#ifEqualsSome thing1 "thing3" "thing4"}}second{{else}}not second{{/ifEqualsSome}}
 
 slice:{{#slice items limit="2" offset="2"}}{{this}}{{/slice}}:end
 increment:{{#each items}}{{#increment 1}}{{@index}}{{/increment}}{{/each}}:end
